# apps/backend/src/controllers/personalities.controller.ts
@@ -68,10 +68,10 @@ export class PersonalitiesController {
           age,
           avatarUrl,
           gender,
-          sex: sex as never,
+          sex,
           voiceInstructions,
           elevenlabsVoiceId,
-          openaiVoiceName: openaiVoiceName as never,
+          openaiVoiceName,
           problemSummaryEn,
           personalityDescriptionEn,
           problemSummaryCs,
@@ -123,10 +123,10 @@ export class PersonalitiesController {
           age,
           avatarUrl,
           gender,
-          sex: sex as never,
+          sex,
           voiceInstructions,
           elevenlabsVoiceId,
-          openaiVoiceName: openaiVoiceName as never,
+          openaiVoiceName,
           problemSummaryEn,
           personalityDescriptionEn,
           problemSummaryCs,
